@@ -362,23 +362,27 @@ bool DP_view_mode_filter_excludes_everything(const DP_ViewModeFilter *vmf)
 
 
 static DP_ViewModeResult make_result(bool visible, bool isolated,
-                                     uint16_t opacity,
+                                     uint16_t opacity, int blend_mode,
                                      DP_ViewModeContext child_vmc)
 {
-    return (DP_ViewModeResult){visible, isolated, opacity, child_vmc};
+    return (DP_ViewModeResult){visible, isolated, opacity, blend_mode,
+                               child_vmc};
 }
 
 static DP_ViewModeResult apply_layer(int layer_id, DP_LayerProps *lp)
 {
     if (DP_layer_props_id(lp) == layer_id) {
         return make_result(true, DP_layer_props_isolated(lp),
-                           DP_layer_props_opacity(lp), make_normal_context());
+                           DP_layer_props_opacity(lp), DP_BLEND_MODE_NORMAL,
+                           make_normal_context());
     }
     else if (DP_layer_props_children_noinc(lp)) {
-        return make_result(true, false, DP_BIT15, make_layer_context(layer_id));
+        return make_result(true, false, DP_BIT15, DP_BLEND_MODE_NORMAL,
+                           make_layer_context(layer_id));
     }
     else {
-        return make_result(false, false, 0, make_nothing_context());
+        return make_result(false, false, 0, DP_BLEND_MODE_NORMAL,
+                           make_nothing_context());
     }
 }
 
@@ -405,11 +409,13 @@ static DP_ViewModeResult apply_frame(int internal_type, int track_index,
     DP_ASSERT(track_index < vmb->count);
     DP_ViewModeTrack *vmt = &vmb->tracks[track_index];
     if (vmt->layer_id == 0 || is_hidden_in_frame(lp, vmt)) {
-        return make_result(false, false, 0, make_nothing_context());
+        return make_result(false, false, 0, DP_BLEND_MODE_NORMAL,
+                           make_nothing_context());
     }
     else {
         return make_result(true, DP_layer_props_isolated(lp),
                            DP_layer_props_opacity(lp),
+                           DP_layer_props_blend_mode(lp),
                            make_frame_context(internal_type, track_index, vmb));
     }
 }
@@ -422,10 +428,12 @@ static DP_ViewModeResult apply_callback(DP_ViewModeCallback *callback,
         return make_result(
             true, DP_layer_props_isolated(lp),
             DP_fix15_mul(parent_opacity, DP_layer_props_opacity(lp)),
+            DP_layer_props_blend_mode(lp),
             (DP_ViewModeContext){TYPE_CALLBACK, {.callback = callback}});
     }
     else {
-        return make_result(false, false, 0, make_nothing_context());
+        return make_result(false, false, 0, DP_BLEND_MODE_NORMAL,
+                           make_nothing_context());
     }
 }
 
@@ -539,11 +547,14 @@ DP_ViewModeResult DP_view_mode_context_apply(const DP_ViewModeContext *vmc,
         uint16_t effective_opacity;
         return is_effectively_visible(lp, parent_opacity, &effective_opacity)
                  ? make_result(true, DP_layer_props_isolated(lp),
-                               effective_opacity, make_normal_context())
-                 : make_result(false, false, 0, make_nothing_context());
+                               effective_opacity, DP_layer_props_blend_mode(lp),
+                               make_normal_context())
+                 : make_result(false, false, 0, DP_BLEND_MODE_NORMAL,
+                               make_nothing_context());
     }
     case TYPE_NOTHING:
-        return make_result(false, false, 0, make_nothing_context());
+        return make_result(false, false, 0, DP_BLEND_MODE_NORMAL,
+                           make_nothing_context());
     case TYPE_LAYER:
         return apply_layer(vmc->layer_id, lp);
     case TYPE_FRAME_MANUAL: {
@@ -551,7 +562,8 @@ DP_ViewModeResult DP_view_mode_context_apply(const DP_ViewModeContext *vmc,
         return is_effectively_visible(lp, parent_opacity, &effective_opacity)
                  ? apply_frame(TYPE_FRAME_MANUAL, vmc->frame.track_index,
                                vmc->frame.vmb, lp)
-                 : make_result(false, false, 0, make_nothing_context());
+                 : make_result(false, false, 0, DP_BLEND_MODE_NORMAL,
+                               make_nothing_context());
     }
     case TYPE_FRAME_RENDER:
         return apply_frame(TYPE_FRAME_RENDER, vmc->frame.track_index,
@@ -561,13 +573,6 @@ DP_ViewModeResult DP_view_mode_context_apply(const DP_ViewModeContext *vmc,
     default:
         DP_UNREACHABLE();
     }
-}
-
-bool DP_view_mode_context_should_flatten(const DP_ViewModeContext *vmc,
-                                         DP_LayerProps *lp,
-                                         uint16_t parent_opacity)
-{
-    return DP_view_mode_context_apply(vmc, lp, parent_opacity).visible;
 }
 
 
